# GLPlay

./: CMakeLists.txt  main.cpp
resources/: manifest.json
resources/meshes/: cube.json  monkey.json
resources/shaders/: frag_simple_330core.glsl  frag_simple_3xx.glsl  simple.glsl  vert_simple.glsl  vert_simple_330core.glsl  vert_simple_3xx.glsl
src/: base_resource.cpp  base_resource.h  bitmap_font.cc  bitmap_font.h  entity.h  event_source.h  font.h  main.cc  main.cpp  mesh_resource.cpp  mesh_resource.h  ortho_viewport.cpp  ortho_viewport.h  perspective_viewport.cpp  perspective_viewport.h  raw_resource.cpp  raw_resource.h  renderable.cpp  renderable.h  resource.h  scene.h  shader.cpp  shader.h  shader_resource.cpp  shader_resource.h  ui_overlay.cpp  ui_overlay.h  utils.cpp  utils.h  vertex.h  viewport.cc  viewport.h  window.cc  window.h
